--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,13 @@ name = "rzen"
 version = "0.1.0"
 
 [dependencies]
-chrono = "*"
-plotly = {version = "0.6.0", features = ["kaleido"]}
-serde = "*"
-
+chrono = "0.4.19"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+askama = "0.10.5"
+rand = "0.7.3"
+rand_distr = "0.2.2"
+itertools = "0.10.0"
 [lib]
 crate-type = ["cdylib"]
 
